javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.4.OBJECT_CLASS_DEFINED.javali
// Rule 2.2.4: No class is declared with the name "Object". This name is reserved for a predefined class which shall serve as the root of the inheritance hierarchy.

class Main {
	void main() {
		int i;
	}
}

class Gaga {
	void swap() {
		int j;
	}
}

